--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
 github: [saintly2k, Chaos472]
-custom: ['https://cscafe.xyz', 'https://wolframe.club', 'https://slexyt.cf']
+custom: ['https://cscafe.xyz', 'https://wolframe.club']
